Alteração no hover do footer

--- a/index.html
+++ b/index.html
@@ -287,44 +287,52 @@
         </section>
 
         <!-- footer -->
-             <footer style="background: linear-gradient(135deg, #1a1a1a, #2d2d2d); color: #fff; font-family: 'Arial', sans-serif; padding: 40px 20px;">
+              <footer style="background: linear-gradient(135deg, #1a1a1a, #2d2d2d); color: #fff; font-family: 'Arial', sans-serif; padding: 40px 20px;">
         <div style="max-width: 1200px; margin: 0 auto; display: flex; flex-wrap: wrap; justify-content: space-between; align-items: flex-start;">
+       
             <div style="flex: 1 1 300px; text-align: center; margin-bottom: 20px;">
                 <img src="/src/image/logo fundo png simples.png" alt="Logo do Jogo" style="max-width: 100px; margin-bottom: 10px;">
             </div>
+
             <div style="flex: 2 1 600px; display: flex; justify-content: space-between; margin-bottom: 20px;">
                 <div style="flex: 1; margin: 0 10px;">
                     <h3 style="color: #98E630; margin-bottom: 10px; font-size: 18px; border-bottom: 2px solid #98E630; display: inline-block;">Explorar</h3>
-                    <a href="#" style="display: block; color: #fff; text-decoration: none; margin-bottom: 5px; transition: color 0.3s ease;">Novos Sistemas</a>
-                    <a href="#" style="display: block; color: #fff; text-decoration: none; margin-bottom: 5px; transition: color 0.3s ease;">Sustentabilidade em Campo</a>
-                    <a href="#" style="display: block; color: #fff; text-decoration: none; margin-bottom: 5px; transition: color 0.3s ease;">Acessórios</a>
+                    <a href="#" style="display: block; color: #fff; text-decoration: none; margin-bottom: 5px; transition: color 0.3s ease;" onmouseover="this.style.color='#98E630';" onmouseout="this.style.color='#fff';">Novos Sistemas</a>
+                    <a href="#" style="display: block; color: #fff; text-decoration: none; margin-bottom: 5px; transition: color 0.3s ease;" onmouseover="this.style.color='#98E630';" onmouseout="this.style.color='#fff';">Sustentabilidade em Campo</a>
+                    <a href="#" style="display: block; color: #fff; text-decoration: none; margin-bottom: 5px; transition: color 0.3s ease;" onmouseover="this.style.color='#98E630';" onmouseout="this.style.color='#fff';">Acessórios</a>
                 </div>
                 <div style="flex: 1; margin: 0 10px;">
                     <h3 style="color: #98E630; margin-bottom: 10px; font-size: 18px; border-bottom: 2px solid #98E630; display: inline-block;">Suporte</h3>
-                    <a href="#" style="display: block; color: #fff; text-decoration: none; margin-bottom: 5px; transition: color 0.3s ease;">Central de Ajuda</a>
-                    <a href="#" style="display: block; color: #fff; text-decoration: none; margin-bottom: 5px; transition: color 0.3s ease;">Garantia</a>
-                    <a href="#" style="display: block; color: #fff; text-decoration: none; margin-bottom: 5px; transition: color 0.3s ease;">Fale Conosco</a>
+                    <a href="#" style="display: block; color: #fff; text-decoration: none; margin-bottom: 5px; transition: color 0.3s ease;" onmouseover="this.style.color='#98E630';" onmouseout="this.style.color='#fff';">Central de Ajuda</a>
+                    <a href="#" style="display: block; color: #fff; text-decoration: none; margin-bottom: 5px; transition: color 0.3s ease;" onmouseover="this.style.color='#98E630';" onmouseout="this.style.color='#fff';">Garantia</a>
+                    <a href="#" style="display: block; color: #fff; text-decoration: none; margin-bottom: 5px; transition: color 0.3s ease;" onmouseover="this.style.color='#98E630';" onmouseout="this.style.color='#fff';">Fale Conosco</a>
                 </div>
                 <div style="flex: 1; margin: 0 10px;">
                     <h3 style="color: #98E630; margin-bottom: 10px; font-size: 18px; border-bottom: 2px solid #98E630; display: inline-block;">Comunidade</h3>
-                    <a href="#" style="display: block; color: #fff; text-decoration: none; margin-bottom: 5px; transition: color 0.3s ease;">Fóruns</a>
-                    <a href="#" style="display: block; color: #fff; text-decoration: none; margin-bottom: 5px; transition: color 0.3s ease;">Eventos</a>
-                    <a href="#" style="display: block; color: #fff; text-decoration: none; margin-bottom: 5px; transition: color 0.3s ease;">Notícias</a>
+                    <a href="#" style="display: block; color: #fff; text-decoration: none; margin-bottom: 5px; transition: color 0.3s ease;" onmouseover="this.style.color='#98E630';" onmouseout="this.style.color='#fff';">Fóruns</a>
+                    <a href="#" style="display: block; color: #fff; text-decoration: none; margin-bottom: 5px; transition: color 0.3s ease;" onmouseover="this.style.color='#98E630';" onmouseout="this.style.color='#fff';">Eventos</a>
+                    <a href="#" style="display: block; color: #fff; text-decoration: none; margin-bottom: 5px; transition: color 0.3s ease;" onmouseover="this.style.color='#98E630';" onmouseout="this.style.color='#fff';">Notícias</a>
                 </div>
             </div>
+
+          
             <div style="flex: 1 1 300px; text-align: center; margin-bottom: 20px;">
                 <h3 style="font-size: 18px; color: #98E630; margin-bottom: 15px;">Siga-nos</h3>
                 <div style="display: flex; justify-content: center; gap: 15px;">
-                    <a href="#" style="width: 40px; height: 40px; background: #333; border-radius: 50%; display: flex; justify-content: center; align-items: center; transition: background 0.3s ease, transform 0.3s ease;">
+                    <a href="#" style="width: 40px; height: 40px; background: #333; border-radius: 50%; display: flex; justify-content: center; align-items: center; transition: background 0.3s ease, transform 0.3s ease;" onmouseover="this.style.background='#98E630'; this.style.transform='scale(1.1)';"
+                        onmouseout="this.style.background='#333'; this.style.transform='scale(1)';">
                         <i class="bi bi-facebook" style="font-size: 20px; color: #fff;"></i>
                     </a>
-                    <a href="#" style="width: 40px; height: 40px; background: #333; border-radius: 50%; display: flex; justify-content: center; align-items: center; transition: background 0.3s ease, transform 0.3s ease;">
+                    <a href="#" style="width: 40px; height: 40px; background: #333; border-radius: 50%; display: flex; justify-content: center; align-items: center; transition: background 0.3s ease, transform 0.3s ease;" onmouseover="this.style.background='#98E630'; this.style.transform='scale(1.1)';"
+                        onmouseout="this.style.background='#333'; this.style.transform='scale(1)';">
                         <i class="bi bi-twitter" style="font-size: 20px; color: #fff;"></i>
                     </a>
-                    <a href="#" style="width: 40px; height: 40px; background: #333; border-radius: 50%; display: flex; justify-content: center; align-items: center; transition: background 0.3s ease, transform 0.3s ease;">
+                    <a href="#" style="width: 40px; height: 40px; background: #333; border-radius: 50%; display: flex; justify-content: center; align-items: center; transition: background 0.3s ease, transform 0.3s ease;" onmouseover="this.style.background='#98E630'; this.style.transform='scale(1.1)';"
+                        onmouseout="this.style.background='#333'; this.style.transform='scale(1)';">
                         <i class="bi bi-instagram" style="font-size: 20px; color: #fff;"></i>
                     </a>
-                    <a href="#" style="width: 40px; height: 40px; background: #333; border-radius: 50%; display: flex; justify-content: center; align-items: center; transition: background 0.3s ease, transform 0.3s ease;">
+                    <a href="#" style="width: 40px; height: 40px; background: #333; border-radius: 50%; display: flex; justify-content: center; align-items: center; transition: background 0.3s ease, transform 0.3s ease;" onmouseover="this.style.background='#98E630'; this.style.transform='scale(1.1)';"
+                        onmouseout="this.style.background='#333'; this.style.transform='scale(1)';">
                         <i class="bi bi-youtube" style="font-size: 20px; color: #fff;"></i>
                     </a>
                 </div>
