--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet"> <!--jetBrains Mono-->
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+        rel="stylesheet"> <!--jetBrains Mono-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/css/header.css">
@@ -37,11 +38,10 @@
     }
 
     header, main, #sobre-produto, #sobre-projeto, #comentarios, footer {
-        /* margin: 10px; */     
+        /* margin: 10px; */
         /* border: 1px solid white; */
         padding: 10px;
     }
-
 </style>
 
 <body>
