--- a/index.html
+++ b/index.html
@@ -13,35 +13,12 @@
     <link rel="stylesheet" href="src/css/main.css">
     <link rel="stylesheet" href="src/css/sobre-produto.css">
     <link rel="stylesheet" href="src/css/sobre-projeto.css">
+    <link rel="stylesheet" href="src/css/styles.css">
     <script src="src/js/modal.js"></script>
     <script src="src/js/whatsApp.js"></script>
     <script src="src/js/pontosImportantes.js"></script>
     <title>AquaPulse 2057</title>
 </head>
-
-<style>
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-
-    html, body {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-    }
-
-    body {
-        background-color: #0D0D0D;
-    }
-
-    header, main, #sobre-produto, #sobre-projeto, #comentarios, footer {
-        /* margin: 10px; */
-        /* border: 1px solid white; */
-        padding: 10px;
-    }
-</style>
 
 <body>
 
