--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
         <p style="color: white"><a href="#" class="links-footer">Termos de uso</a> | <a href="#"
                 class="links-footer">Políticas de Privacidade</a></p>
         <div id="redes-sociais" style="margin: 10px;">
-            <a href="#"><i class="bi bi-google" style="color: green; margin: 5px;"></i></a>
-            <a href="#"><i class="bi bi-linkedin" style="color: green; margin: 5px;"></i></a>
-            <a href="#"><i class="bi bi-instagram" style="color: green; margin: 5px;"></i></a>
-            <a href="#"><i class="bi bi-github" style="color: green; margin: 5px;"></i></a>
-            <a href="#"><i class="bi bi-youtube" style="color: green; margin: 5px;"></i></a>
+            <a href="#" class="footer-icons"><i class="bi bi-google"></i></a>
+            <a href="#" class="footer-icons"><i class="bi bi-linkedin"></i></a>
+            <a href="#" class="footer-icons"><i class="bi bi-instagram"></i></a>
+            <a href="#" class="footer-icons"><i class="bi bi-github"></i></a>
+            <a href="#" class="footer-icons"><i class="bi bi-youtube"></i></a>
         </div>
         <p style="color: white;">
             © 2024 AquaPulse. Todos os direitos reservados.
