--- a/index.html
+++ b/index.html
@@ -59,27 +59,27 @@
             <div class="boxs" id="box-titulo-sobre-produto">
                 <h2 id="titulo-sobre-produto">Sobre o Produto</h2>
             </div>
-            <div class="boxs" id="box-coluna1-linha2" style="height: 40vh; background-color: blue"></div>
-            <div class="boxs" id="box-coluna1-linha3" style="height: 40vh; background-color: purple"></div>
+            <div class="boxs" id="box-coluna1-linha2" style="height: 40vh; background-image: url('src/image/img06.webp'); background-size: cover;"></div>
+            <div class="boxs" id="box-coluna1-linha3" style="height: 40vh; background-image: url('src/image/img01.webp'); background-size: cover;"></div>
         </div>
 
         <div class="containers-sobre-produto">
-            <div class="boxs" id="box-coluna2-linha1" style="height: 65vh; background-color: blue;"></div>
-            <div class="boxs" id="box-coluna2-linha2" style="height: 25vh; background-color: purple;"></div>
+            <div class="boxs" id="box-coluna2-linha1" style="height: 65vh; background-image: url('src/image/img05.webp'); background-size: cover;"></div>
+            <div class="boxs" id="box-coluna2-linha2" style="height: 25vh; background-image: url('src/image/img04.webp'); background-size: cover;"></div>
         </div>
 
         <div class="containers-sobre-produto">
-            <div class="boxs" id="box-coluna3-linha1" style="height: 45vh; background-color: purple;"></div>
-            <div class="boxs" id="box-coluna3-linha2" style="height: 45vh; background-color: purple;"></div>
+            <div class="boxs" id="box-coluna3-linha1" style="height: 45vh; background-image: url('src/image/img07.webp'); background-size: cover;"></div>
+            <div class="boxs" id="box-coluna3-linha2" style="height: 45vh;background-image: url('src/image/img02.webp'); background-size: cover;"></div>
         </div>
 
         <div class="containers-sobre-produto">
-            <div class="boxs" id="box-coluna4-linha1" style="height: 90vh; background-color: blue;"></div>
+            <div class="boxs" id="box-coluna4-linha1" style="height: 90vh; background-image: url('src/image/produtor.webp'); background-size: cover;"></div>
         </div>
 
         <div class="containers-sobre-produto">
-            <div class="boxs" id="box-coluna5-linha1" style="height: 30vh; background-color: purple;"></div>
-            <div class="boxs" id="box-coluna5-linha2" style="height: 60vh; background-color: blue;"></div>
+            <div class="boxs" id="box-coluna5-linha1" style="height: 30vh; background-image: url('src/image/residencial.webp'); background-size: cover;"></div>
+            <div class="boxs" id="box-coluna5-linha2" style="height: 60vh; background-image: url('src/image/img03.webp'); background-size: cover;"></div>
         </div>
 
     </section>
