--- a/index.html
+++ b/index.html
@@ -142,8 +142,7 @@
     <!-- footer -->
 
     <footer>
-        <p style="color: white"><a href="#" class="links-footer">Termos de uso</a> | <a href="#"
-                class="links-footer">Políticas de Privacidade</a></p>
+        <p style="color: white"><a href="#" class="links-footer">Termos de uso</a> | <a href="#" class="links-footer">Políticas de Privacidade</a></p>
         <div id="redes-sociais" style="margin: 10px;">
             <a href="#" class="footer-icons"><i class="bi bi-google"></i></a>
             <a href="#" class="footer-icons"><i class="bi bi-linkedin"></i></a>
