header: img=> icon

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
                 <a class="header-links" href="#" target="_blank">Contato</a>
             </div>
             <div>
-                <a href="#"><i id="icone-perfil" class="bi bi-person-circle"
-                        style="font-size: 35px; color: white;"></i></a>
+                <a href="#"><img src="src/image/logo.png" alt="foto de perfil" style="height: 50px;"></a>
             </div>
         </header>
 
