add funcionalidades aos links do header

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <header>
             <h1 id="titulo-principal">AquaPulse</h1>
             <div>
-                <a class="header-links" href="#" target="_blank">Sobre</a>
-                <a class="header-links" href="#" target="_blank">Serviço</a>
-                <a class="header-links" href="#" target="_blank">Contato</a>
+                <a class="header-links" href="#sobre-projeto">Sobre</a>
+                <a class="header-links" href="#sobre-produto">Serviço</a>
+                <a class="header-links" href="#footer">Contato</a>
             </div>
             <div>
                 <a href="#"><img src="src/image/logo.png" alt="foto de perfil" style="height: 50px;"></a>
@@ -131,7 +131,7 @@
             <div class="comentario">
                 <i id="icone-perfil" class="bi bi-person-circle" style="font-size: 30px; color: orange;"></i>
                 <p class="nome-usuario">Iago Bortoluzzi</p>
-                <p class="data-comentario">31/21/2024</p>
+                <p class="data-comentario">31/12/2024</p>
                 <p class="texto-comentario">top!</p>
             </div>
         </div>
@@ -140,7 +140,7 @@
 
     <!-- footer -->
 
-    <footer>
+    <footer id="footer">
         <p style="color: white"><a href="#" class="links-footer">Termos de uso</a> | <a href="#" class="links-footer">Políticas de Privacidade</a></p>
         <div id="redes-sociais" style="margin: 10px;">
             <a href="#" class="footer-icons"><i class="bi bi-google"></i></a>
