comit de formatação

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 
 <body>
 
-    <div id="header-main-background"
-        style="background-image: url('src/image/image_background.jpg'); background-size: cover;">
+    <div id="header-main-background" style="background-image: url('src/image/image_background.jpg'); background-size: cover;">
 
      <!--Header-->
 
