--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/css/header.css">
     <link rel="stylesheet" href="src/css/footer.css">
-    <link rel="stylesheet" href="src/css/comentarios.css">
-    <link rel="stylesheet" href="src/css/main.css">
-    <link rel="stylesheet" href="src/css/sobre-produto.css">
-    <link rel="stylesheet" href="src/css/sobre-projeto.css">
-    <link rel="stylesheet" href="src/css/styles.css">
+    <link rel="stylesheet" href="src/css/css-index/comentarios.css">
+    <link rel="stylesheet" href="src/css/css-index/main.css">
+    <link rel="stylesheet" href="src/css/css-index/sobre-produto.css">
+    <link rel="stylesheet" href="src/css/css-index/sobre-projeto.css">
+    <link rel="stylesheet" href="src/css/css-index/styles.css">
     <script src="src/js/modal.js"></script>
     <script src="src/js/whatsApp.js"></script>
     <script src="src/js/pontosImportantes.js"></script>
