--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <a class="header-links" href="#sobre-projeto">Sobre</a>
                 <a class="header-links" href="#sobre-produto">Serviço</a>
                 <a class="header-links" href="#footer">Contato</a>
+                <a class="header-links" href="/faq.html">FAQ</a>
             </div>
             <div>
                 <a href="#"><img src="src/image/logo.png" alt="foto de perfil" style="height: 50px;"></a>
