--- a/index.html
+++ b/index.html
@@ -27,19 +27,18 @@
 
      <!--Header-->
 
-        <header>
-            <h1 id="titulo-principal">AquaPulse</h1>
-            <div>
-                <a class="header-links" href="#sobre-projeto">Sobre</a>
-                <a class="header-links" href="#sobre-produto">Serviço</a>
-                <a class="header-links" href="#footer">Contato</a>
-                <a class="header-links" href="faq.html">FAQ</a>
-            </div>
-            <div>
-                <a href="createAccount.html"><img src="src/image/logo.png" alt="foto de perfil" style="height: 50px;"></a>
-            </div>
-        </header>
-
+     <header>
+        <h1 id="titulo-principal">AquaPulse</h1>
+        <div>
+            <a class="header-links" href="/index.html">Sobre</a>
+            <a class="header-links" href="/produtos.html">Produto</a>
+            <a class="header-links" href="/suporte.html">Suporte</a>
+            <a class="header-links" href="/faq.html">FAQ</a>
+        </div>
+        <div>
+            <a href="/usuarioTelaLogin.html"><img src="src/image/logo.png" alt="foto de perfil" style="height: 50px;"></a>
+        </div>
+    </header>
         <!--Main-->
 
         <main>
