--- a/perfil.html
+++ b/perfil.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/src/css/header.css">
-    <title>Perfil do Usuário - AquaPulse</title>
+    <title>AquaPulse 2057</title>
     <style>
         /* Estilo Geral */
         * {
