--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
      <header>
         <h1 id="titulo-principal">AquaPulse</h1>
         <div>
-            <a class="header-links" href="/index.html">Sobre</a>
-            <a class="header-links" href="/produtos.html">Produto</a>
-            <a class="header-links" href="/suporte.html">Suporte</a>
-            <a class="header-links" href="/faq.html">FAQ</a>
+            <a class="header-links" href="index.html">Sobre</a>
+            <a class="header-links" href="produtos.html">Produto</a>
+            <a class="header-links" href="suporte.html">Suporte</a>
+            <a class="header-links" href="faq.html">FAQ</a>
         </div>
         <div>
-            <a href="/usuarioTelaLogin.html"><img src="src/image/logo.png" alt="foto de perfil" style="height: 50px;"></a>
+            <a href="createAccount.php"><img src="src/image/logo.png" alt="foto de perfil" style="height: 50px;"></a>
         </div>
     </header>
         <!--Main-->
