--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
      <header>
         <h1 id="titulo-principal">AquaPulse</h1>
         <div>
-            <a class="header-links" href="index.html">Sobre</a>
-            <a class="header-links" href="produtos.html">Produto</a>
-            <a class="header-links" href="suporte.html">Suporte</a>
+            <a class="header-links" href="#sobre-projeto">Sobre</a>
+            <a class="header-links" href="#sobre-produto">Produto</a>
+            <a class="header-links" href="#footer">Suporte</a>
             <a class="header-links" href="faq.html">FAQ</a>
         </div>
         <div>
