--- a/faq.html
+++ b/faq.html
@@ -165,17 +165,17 @@
 <body>
 
 <header>
-    <h1 id="titulo-principal">AquaPulse</h1>
-    <div>
-        <a class="header-links" href="#sobre-projeto">Sobre</a>
-        <a class="header-links" href="#sobre-produto">Serviço</a>
-        <a class="header-links" href="#footer">Contato</a>
-        <a class="header-links" href="">FAQ</a>
-    </div>
-    <div>
-        <a href="#"><img src="src/image/logo.png" alt="foto de perfil" style="height: 50px;"></a>
-    </div>
-</header>
+        <h1 id="titulo-principal">AquaPulse</h1>
+        <div>
+            <a class="header-links" href="/index.html">Sobre</a>
+            <a class="header-links" href="/produtos.html">Produto</a>
+            <a class="header-links" href="/suporte.html">Suporte</a>
+            <a class="header-links" href="/faq.html">FAQ</a>
+        </div>
+        <div>
+            <a href="/usuarioTelaLogin.html"><img src="src/image/logo.png" alt="foto de perfil" style="height: 50px;"></a>
+        </div>
+    </header>
 
 <div class="container">
     <div class="faq">
