--- a/perguntas-frequentes.html
+++ b/perguntas-frequentes.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="/src/css/header.css" class="href">
-    <link rel="stylesheet" href="/src/css/footer.css" class="href">
-    <title>FAQ - AquaPulse </title>
+    <link rel="stylesheet" href="/src/css/header.css">
+    <link rel="stylesheet" href="/src/css/footer.css">
+    <title>AquaPulse 2057</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -167,13 +167,13 @@
 <header>
         <h1 id="titulo-principal">AquaPulse</h1>
         <div>
-            <a class="header-links" href="/index.html">Sobre</a>
-            <a class="header-links" href="/produtos.html">Produto</a>
-            <a class="header-links" href="/suporte.html">Suporte</a>
-            <a class="header-links" href="/faq.html">FAQ</a>
+            <a class="header-links" href="index.html">Sobre</a>
+            <a class="header-links" href="produtos.html">Produto</a>
+            <a class="header-links" href="suporte.html">Suporte</a>
+            <a class="header-links" href="faq.html">FAQ</a>
         </div>
         <div>
-            <a href="/usuarioTelaLogin.html"><img src="src/image/logo.png" alt="foto de perfil" style="height: 50px;"></a>
+            <a href="perfil.html"><img src="src/image/logo.png" alt="foto de perfil" style="height: 50px;"></a>
         </div>
     </header>
 
