--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a class="header-links" href="#sobre-projeto">Sobre</a>
             <a class="header-links" href="#sobre-produto">Produto</a>
             <a class="header-links" href="#footer">Suporte</a>
-            <a class="header-links" href="faq.html">FAQ</a>
+            <a class="header-links" href="perguntas-frequentes.html">FAQ</a>
         </div>
         <div>
             <a href="createAccount.php"><img src="src/image/logo.png" alt="foto de perfil" style="height: 50px;"></a>
