--- a/perfil.html
+++ b/perfil.html
@@ -267,10 +267,10 @@
     <header>
         <h1 id="titulo-principal">AquaPulse</h1>
         <div>
-            <a class="header-links" href="/index.html">Sobre</a>
-            <a class="header-links" href="/produtos.html">Produtos</a>
-            <a class="header-links" href="/suporte.html">Suporte</a>
-            <a class="header-links" href="/faq.html">FAQ</a>
+            <a class="header-links" href="index.html">Sobre</a>
+            <a class="header-links" href="produtos.html">Produtos</a>
+            <a class="header-links" href="suporte.html">Suporte</a>
+            <a class="header-links" href="perguntas-frequentes.html">FAQ</a>
         </div>
         <div>
             <a href="#"><img src="src/image/logo.png" alt="foto de perfil" style="height: 50px;"></a>
