--- a/produtos.html
+++ b/produtos.html
@@ -377,18 +377,16 @@
 </head>
 
 <body>
-    <header>
+  <header>
         <h1 id="titulo-principal">AquaPulse</h1>
         <div>
-            <a class="header-links" href="#sobre-projeto">Sobre</a>
-            <a class="header-links" href="#sobre-produto">Produto</a>
+            <a class="header-links" href="index.html">Sobre</a>
+            <a class="header-links" href="produtos.html">Produto</a>
             <a class="header-links" href="#footer">Suporte</a>
             <a class="header-links" href="perguntas-frequentes.html">FAQ</a>
         </div>
         <div>
-            <a href="createAccount.php">
-                <img src="src/image/logo.png" alt="foto de perfil" style="height: 50px;">
-            </a>
+            <a href="/perfil.html"><img src="src/image/logo.png" alt="foto de perfil" style="height: 50px;"></a>
         </div>
     </header>
 
