--- a/perfil.html
+++ b/perfil.html
@@ -23,8 +23,8 @@
         }
 
         header {
-            background-color: #0d0d0d;
-            padding: 20px;
+            background-color: #0d0d0d !important;
+            padding-left: 10px; /* Adicionando espaço à esquerda */
         }
 
         /* Nível da Conta */
