--- a/index.html
+++ b/index.html
@@ -27,18 +27,19 @@
 
      <!--Header-->
 
-     <header>
+       <header>
             <h1 id="titulo-principal">AquaPulse</h1>
             <div>
                 <a class="header-links" href="#sobre-projeto">Sobre</a>
                 <a class="header-links" href="produtos.html">Produto</a>
-                <a class="header-links" href="#footer">Suporte</a>
+                <a class="header-links" href="suporte.html">Suporte</a>
                 <a class="header-links" href="perguntas-frequentes.html">FAQ</a>
             </div>
             <div>
                 <a href="/perfil.html"><img src="src/image/logo.png" alt="foto de perfil" style="height: 50px;"></a>
             </div>
         </header>
+
         
         <!--Main-->
 
