--- a/perguntas-frequentes.html
+++ b/perguntas-frequentes.html
@@ -169,7 +169,7 @@
         <div>
             <a class="header-links" href="index.html">Sobre</a>
             <a class="header-links" href="produtos.html">Produto</a>
-            <a class="header-links" href="#footer">Suporte</a>
+            <a class="header-links" href="suporte.html">Suporte</a>
             <a class="header-links" href="perguntas-frequentes.html">FAQ</a>
         </div>
         <div>
