--- a/suporte.html
+++ b/suporte.html
@@ -23,6 +23,7 @@
         header {
             background-color: #0d0d0d !important;
             padding-left: 10px;
+            padding-top: 9px;
             /* Adicionando espaço à esquerda */
         }
         
