rename createAccount.php => crearte

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a class="header-links" href="#footer">Suporte</a>
         </div>
         <div>
-            <a href="createAccount.php"><img src="src/image/logo.png" alt="foto de perfil" style="height: 50px;"></a>
+            <a href="create_account.php"><img src="src/image/logo.png" alt="foto de perfil" style="height: 50px;"></a>
         </div>
     </header>
         
