--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/css/header.css">
     <link rel="stylesheet" href="src/css/footer.css">
-    <link rel="stylesheet" href="src/css/css-index/comentarios.css">
-    <link rel="stylesheet" href="src/css/css-index/main.css">
-    <link rel="stylesheet" href="src/css/css-index/sobre-produto.css">
-    <link rel="stylesheet" href="src/css/css-index/sobre-projeto.css">
-    <link rel="stylesheet" href="src/css/css-index/styles.css">
-    <script src="src/js/modal.js"></script>
+    <link rel="stylesheet" href="src/css/index/comentarios.css">
+    <link rel="stylesheet" href="src/css/index/main.css">
+    <link rel="stylesheet" href="src/css/index/sobre-produto.css">
+    <link rel="stylesheet" href="src/css/index/sobre-projeto.css">
+    <link rel="stylesheet" href="src/css/index/styles.css">
+    <!-- <script src="src/js/modal.js"></script> -->
     <script src="src/js/whatsApp.js"></script>
     <script src="src/js/pontosImportantes.js"></script>
     <title>AquaPulse 2057</title>
