--- a/index.html
+++ b/index.html
@@ -27,19 +27,21 @@
 
      <!--Header-->
 
-       <header>
+     <header>
+        <div id="logo-container">
+            <img id="logo" src="src/image/logo.png" alt="Logo AquaPulse">
             <h1 id="titulo-principal">AquaPulse</h1>
-            <div>
-                <a class="header-links" href="#sobre-projeto">Sobre</a>
-                <a class="header-links" href="produtos.html">Produto</a>
-                <a class="header-links" href="suporte.html">Suporte</a>
-                <a class="header-links" href="perguntas-frequentes.html">FAQ</a>
-            </div>
-            <div>
-                <a href="/perfil.html"><img src="src/image/logo.png" alt="foto de perfil" style="height: 50px;"></a>
-            </div>
-        </header>
-
+        </div>
+        <div id="menu-links">
+            <a class="header-links" href="#sobre-produto">Sobre</a>
+            <a class="header-links" href="produtos.html">Produto</a>
+            <a class="header-links" href="suporte.html">Suporte</a>
+            <a class="header-links" href="perguntas-frequentes.html">FAQ</a>
+        </div>
+        <div id="menu-icon-container">
+            <i class="bi bi-list" id="menu-icon"></i>
+        </div>
+    </header>
         
         <!--Main-->
 
@@ -161,7 +163,7 @@
             event.preventDefault();
         });
     </script>
-
+  <script src="/src/js/menu.js" defer></script>
 </body>
 
 </html>
