--- a/produtos.html
+++ b/produtos.html
@@ -363,16 +363,19 @@
 </head>
 
 <body>
-<header>
-        <h1 id="titulo-principal">AquaPulse</h1>
-        <div>
-            <a class="header-links" href="index.html">Sobre</a>
+     <header>
+        <div id="logo-container">
+            <img id="logo" src="src/image/logo.png" alt="Logo AquaPulse">
+            <h1 id="titulo-principal">AquaPulse</h1>
+        </div>
+        <div id="menu-links">
+            <a class="header-links" href="#sobre-produto">Sobre</a>
             <a class="header-links" href="produtos.html">Produto</a>
             <a class="header-links" href="suporte.html">Suporte</a>
             <a class="header-links" href="perguntas-frequentes.html">FAQ</a>
         </div>
-        <div>
-            <a href="/perfil.html"><img src="src/image/logo.png" alt="foto de perfil" style="height: 50px;"></a>
+        <div id="menu-icon-container">
+            <i class="bi bi-list" id="menu-icon"></i>
         </div>
     </header>
 
@@ -725,6 +728,7 @@
             }
         });
     </script>
+    <script src="/src/js/menu.js" defer></script>
 </body>
 
 </html>
