--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <!--http://localhost/aquapulse-2057/nomedoarquivo.php-->
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
     <meta charset="utf-8">
@@ -18,6 +19,7 @@
     <script src="src/js/modal.js"></script>
     <script src="src/js/whatsApp.js"></script>
     <script src="src/js/pontosImportantes.js"></script>
+    <script src="src/js/menu.js" defer></script>
     <title>AquaPulse 2057</title>
 </head>
 
@@ -35,14 +37,14 @@
         <div id="menu-links">
             <a class="header-links" href="#sobre-produto">Sobre</a>
             <a class="header-links" href="produtos.html">Produto</a>
-            <a class="header-links" href="suporte.html">Suporte</a>
+            <a class="header-links" href="suporte.php">Suporte</a>
             <a class="header-links" href="perguntas-frequentes.html">FAQ</a>
         </div>
         <div id="menu-icon-container">
             <i class="bi bi-list" id="menu-icon"></i>
         </div>
     </header>
-        
+
         <!--Main-->
 
         <main>
@@ -163,7 +165,6 @@
             event.preventDefault();
         });
     </script>
-  <script src="/src/js/menu.js" defer></script>
 </body>
 
 </html>
